# Model

./: .gitignore  README.md  analyze_tokenizer.py  fix_lambda.py  fix_ode_step.py  fix_odeint.py  fix_vectorfield.py  grim_nlp_experiment.py  pyproject.toml  requirements.txt  run.bat  run_demo.py  sekkeisyo.txt  setup_env.ps1  setup_env_gpu.ps1  specifications.md  tekisuto.txt  test_all.py  test_history_compression.py  test_history_debug.py  test_ode_scipy.py  test_tokenizer_speed.py  verify_grim.py  wiki40b_colab_training.ipynb
data/: sample_corpus.txt
data/cache/: hf_615e80e5e08c.txt  hf_9a7b197b6683.txt  hf_aef2a338d464.txt
frozen_numpy_version/: history_np.py  test_numpy_grim.py  tokenizer_np.py
grim/: bootstrap.py  config.py  flow_field.py  flow_field_np.py  geometry_np.py  history.py  k3_meta_learner.py  meta.py  model.py  model_np.py  natural_grad.py  observation.py  observation_np.py  ode_solver.py  ode_solver_np.py  tokenizer.py  training.py
grim/data/: __init__.py  hf_dataset.py  text.py
grim/torch_isolated/: __init__.py  config.py  geometry.py  meta.py  observation.py  ode_solver.py  tokenizer.py  training.py  utils.py
grim/torch_isolated/data/: hf_dataset.py  mnist.py  text.py
grim_nlp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scratch/: check_complex.py  create_notebook.py  extract_changes.py  extracted_changes.txt  verify_stability.py
scripts/: check_gpu.py  generate.py  infer.py  preview_dataset.py  train.py  webui.py
