[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grim-nlp"
version = "0.1.0"
description = "GRIM: Geometric RKHS Integrative Model for NLP"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "torchdiffeq>=0.2.3",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.20.0",
    "gradio>=3.0.0",
]
requires-python = ">=3.9"

[project.scripts]
grim-train = "scripts.train:main"
grim-webui = "scripts.webui:main"
grim-generate = "scripts.generate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grim*", "scripts*"]
